--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Conversion View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -18,11 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSS-Te-cKo">
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIP-OX-QBS">
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -43,21 +38,36 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K5x-7p-V5q">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="AXJ-KO-hhr"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="fahrenheitFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="s9o-tE-RwP"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="7Dd-9j-j11" firstAttribute="centerX" secondItem="MIP-OX-QBS" secondAttribute="centerX" id="5uW-IQ-mJb"/>
+                            <constraint firstItem="MIP-OX-QBS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6hx-yQ-wz0"/>
+                            <constraint firstItem="K5x-7p-V5q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7nI-TZ-vR6"/>
                             <constraint firstItem="OFL-yx-6Ux" firstAttribute="centerX" secondItem="MIP-OX-QBS" secondAttribute="centerX" id="Ccm-Sy-rMI"/>
-                            <constraint firstItem="tSS-Te-cKo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rab-e5-vDg"/>
                             <constraint firstItem="7Dd-9j-j11" firstAttribute="top" secondItem="CFh-BF-qmB" secondAttribute="bottom" constant="8" id="a2F-i8-dux"/>
-                            <constraint firstItem="tSS-Te-cKo" firstAttribute="centerX" secondItem="MIP-OX-QBS" secondAttribute="centerX" id="bKI-gd-G6S"/>
-                            <constraint firstItem="tSS-Te-cKo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="fK3-fK-UWi"/>
+                            <constraint firstItem="K5x-7p-V5q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b85-zP-Syk"/>
+                            <constraint firstItem="K5x-7p-V5q" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="ekf-BR-4dQ"/>
                             <constraint firstItem="OFL-yx-6Ux" firstAttribute="top" secondItem="MIP-OX-QBS" secondAttribute="bottom" constant="8" id="glH-Mg-6cU"/>
+                            <constraint firstItem="MIP-OX-QBS" firstAttribute="top" secondItem="K5x-7p-V5q" secondAttribute="bottom" constant="8" id="idM-1m-vdd"/>
                             <constraint firstItem="CFh-BF-qmB" firstAttribute="centerX" secondItem="MIP-OX-QBS" secondAttribute="centerX" id="nzW-3R-O6C"/>
-                            <constraint firstItem="MIP-OX-QBS" firstAttribute="top" secondItem="tSS-Te-cKo" secondAttribute="bottom" constant="8" id="o5H-IY-M4s"/>
                             <constraint firstItem="CFh-BF-qmB" firstAttribute="top" secondItem="OFL-yx-6Ux" secondAttribute="bottom" constant="8" id="yzR-rr-LXP"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="celsiusLabel" destination="CFh-BF-qmB" id="J5d-EC-zeq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
